--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@web3uikit/core": "^1.1.5",
     "@web3uikit/icons": "^1.1.2",
+    "@web3uikit/web3": "^0.3.2",
     "axios": "^1.3.6",
     "ethers": "^5.7.2",
     "next": "14.2.3",
