--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "wagmi": "^0.12.10"
+    "wagmi": "^0.12.10",
+    "web3": "^4.9.0"
   }
 }
