--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "moralis": "^2.26.2"
+    "moralis": "^2.26.2",
+    "web3": "^4.9.0"
   }
 }
